Updated disqus account

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "http://metnias.github.io"
 title_description: "Programming side of blog of topicular.<br>Mod Manager UI Lead Dev - Rain World: Downpour<br>Korean Translation - Bug Fables: The Everlasting Sapling"
 title_image: "favicons/android-chrome-512x512.png"
 # google_analytics: "UA-########-#"
-disqus_account: disqus_fE0jXvIUZR
+disqus_account: aTopicular
 # github_repository: 
 # addthis_id: ra-################
 post_limit: 5
